--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@
 	box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
+
 
 body{
-	background-color: #A9A9A9;
+	background-color: #000000;
+}
+
+.bg-custom-grey {
+	background-color: #c3cac2 !important;
 }
 /*NAV BAR*/
+
+
 
 .header-main{
 
@@ -24,16 +28,16 @@ body{
     height: 60px;
     
     display: flex;
-    justify-content: right;
+
 }
 
-.header-main{
-   
-    display: flex;
-}
 
+.nav-a {
+	background-color: #747a02;
+	opacity: 0.8;
+}
 .fornav{
-    width: fit-content;
+    color: yellow;
 }
 
 .fornav ul{
@@ -49,7 +53,7 @@ body{
 	color: white;
 	text-decoration: none;
 }
-.fornav ul li a:hover{
+.a ul li a:hover{
 
     color: yellow;
 }
@@ -117,6 +121,27 @@ main-bg {
 	height:500px;
 }
 
+.img2 {
+	width: 80%;
+	height: 200px;
+}
+
 html {
 	height: 800px;
 }
+
+
+/*Projects*/
+.zoom {
+  padding: 50px;
+ 
+  transition: transform .2s; /* Animation */
+  width: 700px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+
+
