--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 	opacity: 0.8;
 
 }
-.fornav{
+/*.fornav{
     color: yellow;
 }
 
@@ -49,7 +49,7 @@ body{
 .a ul li a:hover{
 
     color: yellow;
-}
+}*/
 main-bg {
 	height: 100vh;
 	width: 100%;
