--- a/style.css
+++ b/style.css
@@ -126,12 +126,12 @@ html {
 
 /*Projects*/
 .zoom {
-  padding: 50px;
+  padding: 10px;
  
-  transition: transform .2s; /* Animation */
-  width: 700px;
-  height: 300px;
-  margin: 0 auto;
+  transition: transform .2s;*/ /* Animation */
+/*  width: 800px;
+  height: 500px;
+  margin: 0 auto;*/
 }
 
 .zoom:hover {
